Add 3.3.5-cfbg branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,11 +23,12 @@ services:
 
 env:
   - BRANCH=3.3.5
-  - BRANCH=3.3.5-base_patch  
+  - BRANCH=3.3.5-base_patch
   - BRANCH=3.3.5-custom_links
   - BRANCH=3.3.5-passive_anticheat BASE_BRANCH=3.3.5-base_patch
   - BRANCH=3.3.5-pvpranks BASE_BRANCH=3.3.5-base_patch
   - BRANCH=3.3.5-tele_npc_3 BASE_BRANCH=3.3.5-base_patch
+  - BRANCH=3.3.5-cfbg BASE_BRANCH=3.3.5-base_patch
 
 before_install:
   - git clone --depth=100 --branch=${BRANCH} https://github.com/TrinityCore/TrinityCoreCustomChanges.git server
