Upgrade travis to Ubuntu 18.04

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: xenial
+dist: bionic
 
 language: cpp
 compiler:
@@ -8,7 +8,6 @@ addons:
   apt:
     sources:
       - sourceline: 'ppa:mhier/libboost-latest'
-      - ubuntu-toolchain-r-test
     packages:
       - boost1.67
       - libssl-dev
