Move env variables from bash to yml

--- a/.github/workflows/3.3.5-sonarcloud.yml
+++ b/.github/workflows/3.3.5-sonarcloud.yml
@@ -7,6 +7,12 @@ on:
     branches:
       - 3.3.5-SonarCloud
 
+env:
+  SONAR_SCANNER_VERSION: 4.4.0.2170
+  SONAR_SCANNER_HOME: SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-linux
+  PATH: $HOME/.sonar/build-wrapper-linux-x86:$SONAR_SCANNER_HOME/bin:$PATH
+  SONAR_SCANNER_OPTS: -server
+
 jobs:
   build:
     runs-on: ubuntu-20.04
@@ -21,15 +27,10 @@ jobs:
         sudo apt-get update && sudo apt-get install -yq libboost-all-dev
     - name: SonarCloud Setup
       run: |
-        export SONAR_SCANNER_VERSION=4.4.0.2170
-        export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-linux
         curl --create-dirs -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-linux.zip 
         unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
-        export PATH=$SONAR_SCANNER_HOME/bin:$PATH
-        export SONAR_SCANNER_OPTS="-server"
         curl --create-dirs -sSLo $HOME/.sonar/build-wrapper-linux-x86.zip https://sonarcloud.io/static/cpp/build-wrapper-linux-x86.zip
         unzip -o $HOME/.sonar/build-wrapper-linux-x86.zip -d $HOME/.sonar/
-        export PATH=$HOME/.sonar/build-wrapper-linux-x86:$PATH
     - name: Setup
       run: |
         mkdir bin
@@ -41,6 +42,7 @@ jobs:
         build-wrapper-linux-x86-64 --out-dir bw-output make -j 4 -k && make install
     - name: SonarCloud Analysis
       run: |
+        cd bin
         sonar-scanner \
           -Dsonar.organization=jackpoz-github \
           -Dsonar.projectKey=jackpoz_TrinityCore \
