--- a/.github/workflows/3.3.5-sonarcloud.yml
+++ b/.github/workflows/3.3.5-sonarcloud.yml
@@ -17,6 +17,10 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
+    - name: Debug
+      run: |
+        echo "HOME=${HOME}"
+        echo "PATH=${PATH}"
     - uses: actions/checkout@v2
       with:
         repository: TrinityCore/TrinityCore
