--- a/.github/workflows/3.3.5-sonarcloud.yml
+++ b/.github/workflows/3.3.5-sonarcloud.yml
@@ -23,20 +23,14 @@ jobs:
     - name: Dependencies
       run: |
         sudo apt-get update && sudo apt-get install -yq libboost-all-dev
-    - name: SonarCloud Setup - Build Wrapper
+    - name: SonarCloud Setup
       run: |
         curl --create-dirs -sSLo $HOME/.sonar/build-wrapper-linux-x86.zip https://sonarcloud.io/static/cpp/build-wrapper-linux-x86.zip
         unzip -o $HOME/.sonar/build-wrapper-linux-x86.zip -d $HOME/.sonar/
         echo "::add-path::$HOME/.sonar/build-wrapper-linux-x86"
-    - name: SonarCloud Setup - Sonar Scanner
-      run: |
         curl --create-dirs -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-linux.zip 
         unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
         echo "::add-path::$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-linux/bin"
-    - name: SonarCloud Debug
-      run: |
-        sonar-scanner --version
-        build-wrapper-linux-x86-64 --version
     - name: Setup
       run: |
         mkdir bin
