--- a/.github/workflows/3.3.5-sonarcloud.yml
+++ b/.github/workflows/3.3.5-sonarcloud.yml
@@ -48,6 +48,6 @@ jobs:
         sonar-scanner \
           -Dsonar.organization=jackpoz-github \
           -Dsonar.projectKey=jackpoz_TrinityCore \
-          -Dsonar.sources=. \
+          -Dsonar.sources=src \
           -Dsonar.cfamily.build-wrapper-output=bin/bw-output \
           -Dsonar.host.url=https://sonarcloud.io
