--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ env:
   - BRANCH=3.3.5-cfbg BASE_BRANCH=3.3.5-base_patch
   - BRANCH=3.3.5-lfgsolo
   - BRANCH=3.3.5-vas-autobalance
+  - BRANCH=3.3.5-solocraft
 
 before_install:
   - git clone --branch=${BRANCH} https://github.com/TrinityCore/TrinityCoreCustomChanges.git server
