--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ env:
   - BRANCH=3.3.5-pvpranks BASE_BRANCH=3.3.5-base_patch
   - BRANCH=3.3.5-tele_npc_3 BASE_BRANCH=3.3.5-base_patch
   - BRANCH=3.3.5-cfbg BASE_BRANCH=3.3.5-base_patch
+  - BRANCH=3.3.5-racial-trait BASE_BRANCH=3.3.5-base_patch
   - BRANCH=3.3.5-lfgsolo
   - BRANCH=3.3.5-vas-autobalance
   - BRANCH=3.3.5-solocraft
