Add build matrix

--- a/.github/workflows/trinitycore-custom-changes.yml
+++ b/.github/workflows/trinitycore-custom-changes.yml
@@ -7,6 +7,27 @@ on:
 jobs:
   build:
     runs-on: ubuntu-20.04
+    strategy:
+      fail-fast: false
+      max-parallel: 1
+      matrix:
+        include:
+          - BRANCH=3.3.5
+          - BRANCH=3.3.5-base_patch
+          - BRANCH=3.3.5-passive_anticheat
+            BASE_BRANCH=3.3.5-base_patch
+          - BRANCH=3.3.5-pvpranks
+            BASE_BRANCH=3.3.5-base_patch
+          - BRANCH=3.3.5-tele_npc_3
+            BASE_BRANCH=3.3.5-base_patch
+          - BRANCH=3.3.5-cfbg
+            BASE_BRANCH=3.3.5-base_patch
+          - BRANCH=3.3.5-racial-trait
+            BASE_BRANCH=3.3.5-base_patch
+          - BRANCH=3.3.5-lfgsolo
+          - BRANCH=3.3.5-vas-autobalance
+          - BRANCH=3.3.5-solocraft
+          - BRANCH=3.3.5-skip-dk
     steps:
     - uses: actions/checkout@v2
     - name: MySQL 5.7
@@ -32,6 +53,8 @@ jobs:
     - name: Run release script
       env:
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        BRANCH: ${{ matrix.BRANCH }}
+        BASE_BRANCH: ${{ matrix.BASE_BRANCH }}
       run: |
         rm -rf .git
         chmod +x update-tc-custom-changes.sh
